--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Elisa Brooks">
         <meta name="description" content="Journal Entries">
-        <title>LAB 2</title>
+        <title>LAB 3</title>
         <link rel="icon" type="image/jpeg" href="elisaPic.JPG">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
             <nav>
-                <a href="#entries">Elisa's Journal Entries</a>
+                <b id="name">Elisa's Journal</b>
+                <a href="#entries">Journal Entries</a>
                 <a href="entryForm">Add Entry</a>
             </nav>
             <hr>
