Styled journal entries

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
                 <a href="#entries">Journal Entries</a>
                 <a href="entryForm">Add Entry</a>
             </nav>
-            <hr>
             <h1>Journal Entries</h1>
-            <hr>
         </header>
         <main>
             <div id="entries">
@@ -132,7 +130,7 @@
                         <textarea form='form' rows="10" cols="50" name="body"></textarea>
                         <br><br>
                         <!--Submit-->
-                        <button>Submit</button>
+                        <button class="submit">Submit</button>
                     </fieldset>
                 </form>
             </div>
