Added more required CSS properties and selectors

--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
     </head>
     <body>
         <header>
-            <nav>
-                <b id="name">Elisa's Journal</b>
-                <a href="#entries">Journal Entries</a>
-                <a href="entryForm">Add Entry</a>
-            </nav>
-            <h1>Journal Entries</h1>
+            <div id="bar">
+                <nav>
+                    <b id="name">Elisa's Journal</b>
+                    <a href="#entries">Journal Entries</a>
+                    <a href="entryForm">Add Entry</a>
+                </nav>
+            </div>
         </header>
         <main>
+            <h1>Journal Entries</h1>
             <div id="entries">
                 <section id="entryOne">
                     <h2>Everyone <em>LOVES</em> boba</h2>
@@ -73,7 +75,6 @@
                 </section>
             </div>
             <br>
-            <hr>
             <div id="entryForm">
                 <form id="form">
                     <fieldset>
@@ -137,7 +138,7 @@
         </main>
         <footer>
             <hr>
-            <p>💯This journal was made with ♥ by <span>Elisa Brooks</span> 💯</p>        
+            <p id="footerTag">💯This journal was made with ♥ by <span>Elisa Brooks</span> 💯</p>        
         </footer>
     </body>
 </html>
