--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
         <title>LAB 3</title>
         <link rel="icon" type="image/jpeg" href="elisaPic.JPG">
         <link rel="stylesheet" href="style.css">
+        <style>
+            [title~=Mammoth], video {
+                border: 2px solid black;
+            }
+        </style>
     </head>
     <body>
         <header>
@@ -71,7 +76,7 @@
                             <p>We have to check out and drive back home</p>
                         </details></li>
                     </ol>
-                    <img alt="Mammoth Ski Resort" src="mammoth.jpeg" width="400">
+                    <img title="Mammoth" alt="Mammoth Ski Resort" src="mammoth.jpeg" width="400">
                 </section>
             </div>
             <br>
